# swamp_basic

./: Cargo.toml  README.md  hi.json
examples/: fibonacci.sbc  fizz_buzz.sbc
src/: bytecode.rs  compile.rs  error.rs  main.rs  parser.rs  program.rs  program_executer.rs  scalar_value.rs
src/bytecode/: expression_opcode.rs  l_value_opcode.rs  mod.rs  statement_opcode.rs
src/lexer/: built_in_function.rs  command.rs  keyword.rs  mod.rs  operator.rs  separator.rs  token.rs  tokenize.rs  type_restriction.rs
src/scalar_value/: float.rs  integer.rs  mod.rs  scalar_value.rs  string.rs
