[package]
name = "swamp_basic"
version = "0.8.5"
edition = "2021"
description = "A BASIC interpreter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.25"
strum_macros = "0.25"
num = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-derive = "0.4"
rand = "0.8"